[gd_scene load_steps=9 format=3 uid="uid://c0feoxnk55oty"]

[ext_resource type="Script" uid="uid://bxm6nmvlqmgsg" path="res://scripts/game.gd" id="1_lnu2h"]
[ext_resource type="PackedScene" uid="uid://dawunaogp8een" path="res://scenes/player.tscn" id="1_uwrxv"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_uwrxv"]
distance = -109.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_yqjtg"]
distance = -194.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_lnu2h"]
distance = -108.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_lbhrr"]
distance = -191.0

[sub_resource type="GDScript" id="GDScript_lbhrr"]
script/source = "extends Area2D

"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yqjtg"]
size = Vector2(413, 249)

[node name="game" type="Node2D"]
script = ExtResource("1_lnu2h")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-2, 1)
zoom = Vector2(3, 3)
position_smoothing_enabled = true

[node name="player" parent="." instance=ExtResource("1_uwrxv")]
position = Vector2(-10, 0)

[node name="boundary" type="StaticBody2D" parent="."]
collision_layer = 6
collision_mask = 255

[node name="CollisionShape2D" type="CollisionShape2D" parent="boundary"]
shape = SubResource("WorldBoundaryShape2D_uwrxv")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="boundary"]
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_yqjtg")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="boundary"]
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_lnu2h")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="boundary"]
rotation = 4.71239
shape = SubResource("WorldBoundaryShape2D_lbhrr")

[node name="despawn_area" type="Area2D" parent="boundary"]
collision_mask = 255
script = SubResource("GDScript_lbhrr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="boundary/despawn_area"]
visible = false
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_yqjtg")

[node name="enemy_spawner" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="spawn_1" type="Marker2D" parent="."]
position = Vector2(-169, -89)

[node name="spawn_2" type="Marker2D" parent="."]
position = Vector2(168, -90)

[node name="spawn_3" type="Marker2D" parent="."]
position = Vector2(165, 87)

[node name="spawn_4" type="Marker2D" parent="."]
position = Vector2(-168, 92)

[connection signal="area_exited" from="boundary/despawn_area" to="." method="_on_despawn_area_area_exited"]
[connection signal="timeout" from="enemy_spawner" to="." method="_on_enemy_spawner_timeout"]
